# smart-curtain

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
home-assistant/smart_curtains/: __init__.py  button.py  config_flow.py  cover.py  device.py  manifest.json  number.py  select.py  sensor.py  switch.py
home-assistant/test_server/: server.py
src/: AmbientLightSensor.cpp  AmbientLightSensor.hpp  BH1750.cpp  BH1750.hpp  CLI.cpp  CLI.hpp  CMakeLists.txt  Flash.cpp  Flash.hpp  Fmutex.cpp  Fmutex.h  FreeRTOSConfig.h  HttpConnection.cpp  HttpConnection.hpp  HttpServer.cpp  HttpServer.hpp  I2C.cpp  I2C.hpp  Indicator.cpp  Indicator.hpp  LED.cpp  LED.hpp  Logger.cpp  Logger.hpp  Motor.cpp  Motor.h  Motor.hpp  PicoI2C.cpp  PicoI2C.h  PicoW_I2C.cpp  PicoW_I2C.h  Primitive.cpp  Primitive.hpp  Queue.cpp  Queue.hpp  RTC.cpp  RTC.hpp  SPI.cpp  SPI.h  SPIDevice.cpp  (+17 more)
